# guardio-backend-exercise

./: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  README.md  config.json  docker-compose.yml  docker-config.json  prod-config.json  pyproject.toml
app/: config.py  logging.py  main.py  state.py
app/proto/: pokemon.proto
app/routers/: internal.py  stream.py
app/services/: proxy.py  proxy_rules.py  security.py  stats.py
downstream-servers/: README.md  server_main.py
results/: flow.md
scripts/: mock_downstream.py  send_pokemon.py
tests/: conftest.py  test_internal_router.py  test_proxy.py  test_proxy_rules.py  test_security.py  test_stats.py  test_stream_router.py
