[project]
name = "guardio-backend-exercise"
version = "0.1.0"
description = "Pokemon Proxy Service - A reverse-proxy that consumes Pokemon protobuf streams and routes them based on config rules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "protobuf>=5.29.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
    "grpcio-tools>=1.68.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.0.0",
]
