[project]
name = "guardio-backend-exercise"
version = "0.1.0"
description = "Pokemon Proxy Service - A reverse-proxy that consumes Pokemon protobuf streams and routes them based on config rules"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "protobuf>=5.29.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
    "grpcio-tools>=1.68.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
